--- a/Public/CSS/style.css
+++ b/Public/CSS/style.css
@@ -20,3 +20,15 @@ p {
 .img-small {
 	width: 180px;
 }
+
+#video-grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, 300px);
+	grid-auto-rows: 300px;
+}
+
+video {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
