--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -1,8 +1,8 @@
 <h1>Sala</h1>
 <div id="video-grid">
-    <video id="userVideo"></video>
-    <video id="partnerVideo"></video>
+
 </div>
-<script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+<button id="compartilharTela" class=' btn blue'>Compartilhar tela</button>
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="/socket.io/socket.io.js" defer></script>
 <script src="/Javascript/chamadas.js" defer></script>
