--- a/Views/Chamadas/lobby.hbs
+++ b/Views/Chamadas/lobby.hbs
@@ -1,2 +1,8 @@
 <h1>Lobby</h1>
 {{teste.nome}}
+
+<ul id="listadeUsers">
+
+</ul>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/Javascript/lobby.js"></script>
