--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -3,6 +3,7 @@
 
 </div>
 <button id="compartilharTela" class=' btn blue'>Compartilhar tela</button>
+<button id="pararDeCompartilhar" style="display: none;" class=' btn blue'>Parar de compartilhar tela</button>
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="/socket.io/socket.io.js" defer></script>
 <script src="/Javascript/chamadas.js" defer></script>
