--- a/Views/Testes/teste.hbs
+++ b/Views/Testes/teste.hbs
@@ -16,6 +16,9 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <button class="btn orange"> <a href="/testes/{{teste._id}}/chamada/lobby">Ir para o lobby</a> </button>
+    </div>
     <div class="col s12 m4">
         <div class="card center-align">
             <div class="card-content">
