--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -17,7 +17,7 @@
         <h3>Anotações</h3>
         <form action="/testes/{{teste._id}}/chamada/anotacao" method="POST" id="anotacoes">
             <input type="hidden" name="_method" value="PUT">
-            <textarea name="anotacoes" placeholder="Escreve sua anotações"></textarea>
+            <textarea name="anotacao" placeholder="Escreve sua anotações"></textarea>
             <input type="submit">Salvar anotação</input>
         </form>
     </div>
