Dados prontos pro calendario

--- a/Views/calendario.hbs
+++ b/Views/calendario.hbs
@@ -1,5 +1,9 @@
 <h1>Calendario</h1>
 {{#each testes as |teste|}}
 <p>{{teste.nome}}</p>
-
 {{/each}}
+<div id='calendar'></div>
+
+
+<script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.3.2/main.min.js' defer></script>
+<script src="/Javascript/calendario.js" defer></script>
