--- a/Views/Testes/add.hbs
+++ b/Views/Testes/add.hbs
@@ -13,6 +13,18 @@
                 <textarea id="body" name="descricao"></textarea>
             </div>
         </div>
+        <div class="row">
+            <div class="input-field">
+                <input type="date" id="diaMarcado" name="diaMarcado">
+                <label for="diaMarcado">Dia</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field">
+                <input type="time" id="horarioMarcado" name="horarioMarcado">
+                <label for="horarioMarcado">Horario</label>
+            </div>
+        </div>
         <div class="tarefas">
         </div>
         <div class="row">
