criado routes para os testers,  atualizado o modelo do User, e criado views para convites

--- a/Views/Testes/add.hbs
+++ b/Views/Testes/add.hbs
@@ -9,6 +9,12 @@
         </div>
         <div class="row">
             <div class="input-field">
+                <input type="url" id="url" name="url">
+                <label for="title">URL:</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field">
                 <h5>Descrição do teste</h5>
                 <textarea id="body" name="descricao"></textarea>
             </div>
