--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -15,11 +15,8 @@
     </div>
     <div class="col s6">
         <h3>Anotações</h3>
-        <form action="/testes/{{teste._id}}/chamada/anotacao" method="POST" id="anotacoes">
-            <input type="hidden" name="_method" value="PUT">
-            <textarea name="anotacao" placeholder="Escreve sua anotações"></textarea>
-            <input type="submit">Salvar anotação</input>
-        </form>
+        <textarea name="anotacao" id="anotacoes" placeholder="Escreve sua anotações"></textarea>
+        <button class='btnanotacao'>Salvar anotação</button>
     </div>
 </div>
 
