gravação quase funcionando totalmente

--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -2,6 +2,8 @@
 <div id="video-grid">
 
 </div>
+<button id="gravar" class=' btn blue'>Gravar tela</button>
+<button id="parar" class=' btn blue'>Parar de gravar tela</button>
 <button id="compartilharTela" class=' btn blue'>Compartilhar tela</button>
 <button id="pararDeCompartilhar" style="display: none;" class=' btn blue'>Parar de compartilhar tela</button>
 <div>
@@ -17,6 +19,9 @@
         <h3>Anotações</h3>
         <textarea name="anotacao" id="anotacoes" placeholder="Escreve sua anotações"></textarea>
         <button class='btnanotacao'>Salvar anotação</button>
+    </div>
+    <div class="gravacao">
+        <video id="gravacao" autoplay="true"></video>
     </div>
 </div>
 
