Adicionado a possibilidade de deletar contar

--- a/Views/Layouts/main.hbs
+++ b/Views/Layouts/main.hbs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href='https://cdn.jsdelivr.net/npm/fullcalendar@5.3.2/main.css' />
+    <link rel="stylesheet" href='/CSS/FullCallendar/main.min.css'>
     <link rel="stylesheet" href="/css/style.css">
     <title>Ally</title>
 </head>
@@ -25,8 +25,7 @@
     </div>
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script>
-        new window.VLibras.Widget('https://vlibras.gov.br/app');
-    </script>
+        new window.VLibras.Widget(' https://vlibras.gov.br/app'); </script>
 </body>
 
 </html>
