--- a/Views/Partials/_header.hbs
+++ b/Views/Partials/_header.hbs
@@ -9,6 +9,7 @@
             <li><a href="/users/register">Registrar</a></li>
             <li><a href="/users/login">Login</a></li>
             <li><a href="/users/logout">Logout</a></li>
+            <li><a href="/users/deletar">Deletar</a></li>
         </ul>
     </div>
 </nav>
