--- a/Views/calendario.hbs
+++ b/Views/calendario.hbs
@@ -5,5 +5,6 @@
 <div id='calendar'></div>
 
 
-<script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.3.2/main.min.js' defer></script>
+<script src='/Javascript/FullCallendar/main.min.js' defer></script>
+<script src='/Javascript/FullCallendar/pt-br.js' defer></script>
 <script src="/Javascript/calendario.js" defer></script>
