--- a/Views/Layouts/main.hbs
+++ b/Views/Layouts/main.hbs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href='/CSS/FullCallendar/main.min.css'>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/theme.css">
     <title>Ally</title>
 </head>
 
