--- a/Views/Layouts/loginLayout.hbs
+++ b/Views/Layouts/loginLayout.hbs
@@ -4,24 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
-        integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/CSS/style.css">
-    <title>Ally Login</title>
+    <link rel="stylesheet" href="\CSS\theme.css">
+
 </head>
 
 <body>
-    <div class="container login-container">
-        <div class="card">
-            <div class="card-contnet">
-                {{{body}}}
-            </div>
+
+    {{{body}}}
+
+
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
         </div>
     </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget(' https://vlibras.gov.br/app');
+    </script>
 </body>
 
 </html>
