--- a/Views/login.hbs
+++ b/Views/login.hbs
@@ -5,7 +5,7 @@
 </header>
 <section id="loginSection">
     <main>
-        <h1>Crie uma Conta</h1>
+        <h1>Entrar</h1>
         <form action="/users/login" method="POST">
             <div>
                 <label for="email">Email</label>
