--- a/Public/CSS/theme.css
+++ b/Public/CSS/theme.css
@@ -20,11 +20,10 @@ ul {
 }
 
 #loginSection {
+  overflow-x: hidden;
   width: 100vw;
-  height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
   gap: 0px 0px;
   grid-template-areas: ". . .";
 }
@@ -35,7 +34,7 @@ ul {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  align-self: center;
+  justify-self: center;
 }
 #loginSection main h1 {
   text-align: center;
@@ -55,7 +54,8 @@ ul {
   font-size: 1.125rem;
 }
 #loginSection main form div input[type=email],
-#loginSection main form div input[type=password] {
+#loginSection main form div input[type=password],
+#loginSection main form div input[type=text] {
   width: 100%;
   font-size: 1rem;
   border: 1px solid #1632e8;
@@ -79,7 +79,7 @@ ul {
 #loginSection main div.ou {
   text-align: center;
   font-size: 1.25rem;
-  margin-bottom: 2.125rem;
+  margin-bottom: 1rem;
   position: relative;
   font-weight: 700;
 }
@@ -107,7 +107,7 @@ ul {
   height: 51px;
   border-radius: 51px;
   box-shadow: 0px 3px 4px 2px rgba(125, 124, 124, 0.16);
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 #loginSection main .google-btn a {
   width: 100%;
