--- a/Views/register.hbs
+++ b/Views/register.hbs
@@ -1,77 +1,73 @@
-<h3>Ally</h3>
-<div class="section">
-    <p class="lead">Acessibilidade Digital</p>
-</div>
-<div class="divider"></div>
-<div class="section">
-    <div class="row">
+<header>
+    <a href="/">
+        <img src="\Imagens\Logo.svg" alt="Logo do Ally" id="logoLogin">
+    </a>
+</header>
+<section id="loginSection">
+    <main>
+        <h1>Crie uma Conta</h1>
         {{#if tester}}
-        <form class="col s12" action="/users/register/tester" method="POST">
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="nome" type="name" name="nome" class="validate" value={{tipoDiferente nome 'undefined'}}>
-                    <label for="email">Nome</label>
-                </div>
+        <form action="/users/register/tester" method="POST">
+            <div>
+                <label for="nome">Nome</label>
+                <input placeholder="Como você quer ser chamado?" id="nome" type="text" name='nome'
+                    value={{tipoDiferente nome 'undefined'}}>
             </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="email" type="email" name="email" class="validate"
-                        value={{tipoDiferente email 'undefined'}}>
-                    <label for="email">Email</label>
-
-                </div>
+            <div>
+                <label for="email">Email</label>
+                <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
+                    value={{tipoDiferente email 'undefined'}}>
             </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <label for="password">Senha</label>
-                    <input id="senha" type="password" name="senha" value={{tipoDiferente senha 'undefined'}}>
-                </div>
+            <div>
+                <label for="senha">Senha</label>
+                <input id="senha" type="password" name="senha" placeholder="Digite sua senha">
             </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <label for="password">Confirmar Senha</label>
-                    <input id="senha2" type="password" name="senha2" value={{tipoDiferente senha2 'undefined'}}>
-                </div>
+            <div>
+                <label for="senha2">Confirmar senha</label>
+                <input id="senha2" type="password" name="senha2" placeholder="Digite sua senha">
             </div>
-            <button class="btn waves-effect waves-light" type="submit" name="action">Enviar
-            </button>
+            <div>
+                <input value="Criar Conta" type="submit">
+            </div>
         </form>
         {{else}}
-        <form class="col s12" action="/users/register" method="POST">
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="nome" type="name" name="nome" class="validate" value={{tipoDiferente nome 'undefined'}}>
-                    <label for="email">Nome</label>
-                </div>
+        <form action="/users/register" method="POST">
+            <div>
+                <label for="nome">Nome</label>
+                <input placeholder="Como você quer ser chamado?" id="nome" type="text" name='nome'
+                    value={{tipoDiferente nome 'undefined'}}>
             </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="email" type="email" name="email" class="validate"
-                        value={{tipoDiferente email 'undefined'}}>
-                    <label for="email">Email</label>
-
-                </div>
+            <div>
+                <label for="email">Email</label>
+                <input placeholder="Insira seu e-mail" id="email" type="email" name='email'
+                    value={{tipoDiferente email 'undefined'}}>
             </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <label for="password">Senha</label>
-                    <input id="senha" type="password" name="senha" value={{tipoDiferente senha 'undefined'}}>
-                </div>
+            <div>
+                <label for="senha">Senha</label>
+                <input id="senha" type="password" name="senha" placeholder="Digite sua senha">
             </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <label for="password">Confirmar Senha</label>
-                    <input id="senha2" type="password" name="senha2" value={{tipoDiferente senha2 'undefined'}}>
-                </div>
+            <div>
+                <label for="senha2">Confirmar senha</label>
+                <input id="senha2" type="password" name="senha2" placeholder="Digite sua senha">
             </div>
-            <button class="btn waves-effect waves-light" type="submit" name="action">Enviar
-
-            </button>
+            <div>
+                <input value="Criar Conta" type="submit">
+            </div>
         </form>
         {{/if}}
-
-    </div>
-    <a href="/users/login/google" class="btn red darken-1">
-        <i class="fab fa-google left"></i> Log In com Google
-    </a>
-</div>
+        <div class="ou">Ou</div>
+        <div class="google-btn" role="button">
+            <a aria-label="Link para entrar usando o google" href="/users/login/google">
+                <div "google-icon-wrapper">
+                    <img class="google-icon"
+                        src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
+                        alt="Icone do Goole">
+                </div>
+                <span class="btn-text">Continuar com Google</span>
+            </a>
+        </div>
+        <div class="npossui">
+            Ja possui conta?<a href="/users/login">Entre aqui</a>
+        </div>
+    </main>
+</section>
