--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -1,1 +1,8 @@
 @import "partials/reset";
+@import "partials/colors";
+@import "partials/buttons";
+@import "partials/header";
+@import "partials/navbar";
+@import "partials/sections-home";
+@import "partials/footer";
+@import "partials/mediasqueries";
