--- a/Views/Layouts/main.hbs
+++ b/Views/Layouts/main.hbs
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href='/CSS/FullCallendar/main.min.css'>
-    <link rel="stylesheet" href="/css/theme.css">
     <title>Ally</title>
+
+    <link rel="stylesheet" href="/css/theme.css">
 </head>
 
+
 <body>
-    {{> _header}}
-    {{> _add_btn}}
-    <div class=" container">
-        {{{body}}}
-    </div>
+
+    {{{body}}}
+
+
+
+
+
+
 
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
@@ -23,6 +27,21 @@
             <div class="vw-plugin-top-wrapper"></div>
         </div>
     </div>
+
+    <script>
+        let show = true;
+
+        const menuSection = document.querySelector(".menu-section")
+        const menuToggle = menuSection.querySelector(".menu-toggle")
+
+        menuToggle.addEventListener("click", () => {
+
+            document.body.style.overflow = show ? "hidden" : "initial"
+
+            menuSection.classList.toggle("on", show)
+            show = !show;
+        })
+    </script>
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script>
         new window.VLibras.Widget(' https://vlibras.gov.br/app'); </script>
