--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -4,6 +4,6 @@
 @import "partials/buttons";
 @import "partials/header";
 @import "partials/navbar";
-@import "partials/sections-home";
+@import "partials/sectionsHome";
 @import "partials/footer";
 @import "partials/mediasqueries";
