Ajustes no login e na pagina de criar conta

--- a/Views/homepage.hbs
+++ b/Views/homepage.hbs
@@ -30,11 +30,11 @@
                     {{!-- / menu mobile --}}
 
                     <ul id="menu">
-                        <li><a href="">Sobre nós</a></li>
-                        <li><a href="">Contato</a></li>
-                        <li><a class="highlight" href="">Seja pago para testar</a></li>
-                        <li><a href="">Criar conta</a></li>
-                        <li><a class="btn-login" href="">Entrar</a></li>
+                        <li><a href="/sobrenos">Sobre nós</a></li>
+                        <li><a href="/contato">Contato</a></li>
+                        <li><a class="highlight" href="/tester">Seja pago para testar</a></li>
+                        <li><a href="/users/register">Criar conta</a></li>
+                        <li><a class="btn-login" href="/users/login">Entrar</a></li>
                     </ul>
                 </div>
                 {{!-- / menu --}}
@@ -53,7 +53,7 @@
                 <img src="img/banner.svg" alt="...">
             </div>
             {{!-- / banner --}}
-            
+
         </div>
 
     </header>
