--- a/Views/register.hbs
+++ b/Views/register.hbs
@@ -66,8 +66,8 @@
                 <span class="btn-text">Continuar com Google</span>
             </a>
         </div>
-        <div class="npossui">
+        {{!-- <div class="npossui">
             Ja possui conta?<a href="/users/login">Entre aqui</a>
-        </div>
+        </div> --}}
     </main>
 </section>
