--- a/Public/CSS/sass/partials/_loginTheme.scss
+++ b/Public/CSS/sass/partials/_loginTheme.scss
@@ -5,15 +5,15 @@
 }
 
 #loginSection {
-	overflow-x: hidden;
-	width: 100vw;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	gap: 0px 0px;
 	grid-template-areas: '. . .';
+	overflow-x: hidden;
 	
 	main {
-		width: 518px;
+		overflow-x: hidden;
+		width: 51.8rem;
 		grid-column: 2;
 		display: flex;
 		flex-direction: column;
@@ -22,8 +22,8 @@
 		justify-self: center;
 		h1 {
 			text-align: center;
-			font-size: 2rem;
-			margin-bottom: 0.625rem;
+			font-size: 3.2rem;
+			margin-bottom: 1rem;
 			color: $roxo;
 		}
 		form {
@@ -33,41 +33,41 @@
 				justify-content: center;
 				label {
 					color: $azul;
-					margin-bottom: 0.625rem;
-					font-size: 1.125rem;
+					margin-bottom: 1rem;
+					font-size: 1.8rem;
 				}
 
 				input[type='email'],
 				input[type='password'],
 				input[type='text']  {
 					width: 100%;
-					font-size: 1rem;
+					font-size: 1.6rem;
 					border: 1px solid $azul;
 					border-radius: 6px;
-					padding: 0.65rem 1rem;
+					padding: 1rem 1.6rem;
 				}
 				input[type='submit'] {
 					display: flex;
 					align-items: center;
 					justify-content: center;
 					align-self: center;
-					width: 17.5rem;
-					height: 3.125rem;
-					font-size: 1.25rem;
+					width: 28rem;
+					height: 5rem;
+					font-size: 2rem;
 					color: white;
 					background-color: $azul;
 					font-weight: 700;
-					border-radius: 51px;
+					border-radius: 5.1rem;
 					border: 0px;
 				}
 
-				margin-bottom: 1.6875rem;
+				margin-bottom: 3.2rem;
 			}
 		}
 		div.ou {
 			text-align: center;
-			font-size: 1.25rem;
-			margin-bottom: 1rem;
+			font-size: 1.6rem;
+			margin-bottom: 2rem;
 			position: relative;
 			font-weight: 700;
 			&::after {
@@ -91,8 +91,8 @@
 		}
 		.google-btn {
 			align-self: center;
-			width: 346px;
-			height: 51px;
+			width: 34.6rem;
+			height: 5.1rem;
 			border-radius: 51px;
 			box-shadow: 0px 3px 4px 2px rgba(125, 124, 124, 0.16);
 			a {
@@ -108,28 +108,28 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				width: 40px;
-				height: 50px;
+				width: 4rem;
+				height: 5rem;
 				border-radius: 2px;
 			}
 			.google-icon {
 				margin-top: 2px;
 				margin-left: 11px;
-				width: 17px;
-				height: 17px;
+				width: 1.7rem;
+				height: 1.7rem;
 			}
 			.btn-text {
 				display: flex;
 				align-self: center;
 				text-align: center;
-				font-size: 1.25rem;
+				font-size: 1.6rem;
 				letter-spacing: 0.2px;
 			}
-			margin-bottom: 20px;
+			margin-bottom: 3.5rem;
 		}
 		div.npossui {
 			text-align: center;
-			font-size: 18px;
+			font-size: 1.8rem;
 
 			a {
 				color: $azul;
