--- a/Public/CSS/theme.css
+++ b/Public/CSS/theme.css
@@ -44,104 +44,71 @@ h2 {
 }
 
 #loginSection {
-  overflow-x: hidden;
-  width: 100vw;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 0px 0px;
-      grid-template-areas: '. . .';
+  grid-template-areas: ". . .";
+  overflow-x: hidden;
 }
-
 #loginSection main {
-  width: 518px;
-  -ms-grid-column: 2;
+  overflow-x: hidden;
+  width: 51.8rem;
   grid-column: 2;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
   justify-self: center;
 }
-
 #loginSection main h1 {
   text-align: center;
-  font-size: 2rem;
-  margin-bottom: 0.625rem;
+  font-size: 3.2rem;
+  margin-bottom: 1rem;
   color: #02011d;
 }
-
 #loginSection main form div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 1.6875rem;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 3.2rem;
 }
-
 #loginSection main form div label {
   color: #1632e8;
-  margin-bottom: 0.625rem;
-  font-size: 1.125rem;
+  margin-bottom: 1rem;
+  font-size: 1.8rem;
 }
-
-#loginSection main form div input[type='email'],
-#loginSection main form div input[type='password'],
-#loginSection main form div input[type='text'] {
+#loginSection main form div input[type=email],
+#loginSection main form div input[type=password],
+#loginSection main form div input[type=text] {
   width: 100%;
-  font-size: 1rem;
+  font-size: 1.6rem;
   border: 1px solid #1632e8;
   border-radius: 6px;
-  padding: 0.65rem 1rem;
+  padding: 1rem 1.6rem;
 }
-
-#loginSection main form div input[type='submit'] {
-  display: -webkit-box;
-  display: -ms-flexbox;
+#loginSection main form div input[type=submit] {
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-item-align: center;
-      align-self: center;
-  width: 17.5rem;
-  height: 3.125rem;
-  font-size: 1.25rem;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  width: 28rem;
+  height: 5rem;
+  font-size: 2rem;
   color: white;
   background-color: #1632e8;
   font-weight: 700;
-  border-radius: 51px;
+  border-radius: 5.1rem;
   border: 0px;
 }
-
 #loginSection main div.ou {
   text-align: center;
-  font-size: 1.25rem;
-  margin-bottom: 1rem;
+  font-size: 1.6rem;
+  margin-bottom: 2rem;
   position: relative;
   font-weight: 700;
 }
-
 #loginSection main div.ou::after {
-  content: '';
+  content: "";
   width: 40%;
   border-bottom: solid 1px #1632e8;
   position: absolute;
@@ -149,9 +116,8 @@ h2 {
   top: 50%;
   z-index: -1;
 }
-
 #loginSection main div.ou::before {
-  content: '';
+  content: "";
   width: 40%;
   border-bottom: solid 1px #1632e8;
   position: absolute;
@@ -159,73 +125,48 @@ h2 {
   top: 50%;
   z-index: -1;
 }
-
 #loginSection main .google-btn {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  width: 346px;
-  height: 51px;
+  align-self: center;
+  width: 34.6rem;
+  height: 5.1rem;
   border-radius: 51px;
-  -webkit-box-shadow: 0px 3px 4px 2px rgba(125, 124, 124, 0.16);
-          box-shadow: 0px 3px 4px 2px rgba(125, 124, 124, 0.16);
-  margin-bottom: 20px;
+  box-shadow: 0px 3px 4px 2px rgba(125, 124, 124, 0.16);
+  margin-bottom: 3.5rem;
 }
-
 #loginSection main .google-btn a {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-evenly;
+  align-items: center;
   color: #02011d;
   text-decoration: none;
 }
-
 #loginSection main .google-btn .google-icon-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 40px;
-  height: 50px;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 5rem;
   border-radius: 2px;
 }
-
 #loginSection main .google-btn .google-icon {
   margin-top: 2px;
   margin-left: 11px;
-  width: 17px;
-  height: 17px;
+  width: 1.7rem;
+  height: 1.7rem;
 }
-
 #loginSection main .google-btn .btn-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-item-align: center;
-      align-self: center;
+  align-self: center;
   text-align: center;
-  font-size: 1.25rem;
+  font-size: 1.6rem;
   letter-spacing: 0.2px;
 }
-
 #loginSection main div.npossui {
   text-align: center;
-  font-size: 18px;
+  font-size: 1.8rem;
 }
-
 #loginSection main div.npossui a {
   color: #1632e8;
 }
@@ -255,14 +196,10 @@ h2 {
   font-weight: 700;
   border-radius: 2.5rem;
   cursor: pointer;
-  -webkit-transition-duration: 0.5s;
-          transition-duration: 0.5s;
-  -webkit-transition-property: background-color;
+  transition-duration: 0.5s;
   transition-property: background-color;
-  -webkit-transition-timing-function: ease;
-          transition-timing-function: ease;
+  transition-timing-function: ease;
 }
-
 .btn-cta:hover {
   background-color: #2d13b2;
 }
@@ -285,29 +222,23 @@ h2 {
 }
 
 #banner {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-top: 4rem;
 }
-
 #banner .banner-text {
   margin-top: 5rem;
   margin-left: 1.2rem;
 }
-
 #banner h1 {
   padding-right: 1.2rem;
   font-size: 4rem;
   line-height: 1.3;
 }
-
 #banner p {
   margin-top: 1.5rem;
   color: #1e266d;
   font-size: 2.5rem;
 }
-
 #banner img {
   max-width: 550px;
 }
@@ -319,7 +250,6 @@ h2 {
   padding: 0.5rem;
   color: #000;
 }
-
 .skip-links a:focus {
   top: 1.2rem;
   left: 5rem;
@@ -332,35 +262,23 @@ h2 {
 }
 
 nav.main-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   margin-top: 1.5rem;
 }
-
 nav.main-nav ul#menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-left: auto;
 }
-
 nav.main-nav ul#menu li a {
   margin-left: 3rem;
   color: var(--color-black);
   font-weight: 700;
 }
-
 nav.main-nav ul#menu li:nth-child(4) {
   margin-left: 3rem;
 }
-
 nav.main-nav ul#menu .highlight {
   padding-bottom: 0.2rem;
   border-bottom: 4px solid var(--color-blue);
@@ -376,37 +294,25 @@ nav.main-nav ul#menu .highlight {
 #como-funciona {
   margin: 10rem 0;
 }
-
 #como-funciona .steps {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 20px;
   margin: 5rem auto;
 }
-
 #como-funciona .steps .step {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   text-align: center;
 }
-
 #como-funciona img {
   max-width: 320px;
   margin: 10px auto;
 }
-
 #como-funciona h3 {
   font-size: 2.5rem;
   font-weight: 900;
 }
-
 #como-funciona p {
   padding: 10px 50px;
   line-height: 1.5;
@@ -417,7 +323,6 @@ nav.main-nav ul#menu .highlight {
   text-align: center;
   background: linear-gradient(3deg, rgba(255, 254, 246, 0.8) 0%, rgba(255, 255, 251, 0.8) 60%, white 100%);
 }
-
 #orientacoes p {
   font-size: 2rem;
   line-height: 1.5;
@@ -427,53 +332,35 @@ nav.main-nav ul#menu .highlight {
   margin: 10rem 0;
   text-align: center;
 }
-
 #motivos .subtitle {
   font-size: 2.4rem;
 }
-
 #motivos .itens-motivos {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(400px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-gap: 30px 10px;
   margin: 5rem auto;
   padding: 0 6rem 0 12rem;
 }
-
 #motivos .item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   text-align: left;
   padding-right: 10rem;
 }
-
 #motivos .item p {
   margin: 2rem 0;
   line-height: 1.5;
   font-size: 1.8rem;
 }
-
 #motivos .item h3 {
   font-size: 2rem;
 }
 
 .item span {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   margin: 1rem 0 3rem;
   background: var(--color-blue);
   border-radius: 50%;
@@ -486,66 +373,48 @@ nav.main-nav ul#menu .highlight {
 #call-to-action {
   background: linear-gradient(3deg, rgba(249, 252, 255, 0.9) 0%, #fbfdff 50%, white 100%);
 }
-
 #call-to-action .cta {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 #call-to-action .cta-text {
   text-align: right;
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
+  order: 1;
   margin-top: 10rem;
   margin-left: 23rem;
 }
-
 #call-to-action .cta-text h2 {
   text-align: right;
   margin: 0;
   line-height: 1.3;
   margin-bottom: 2rem;
 }
-
 #call-to-action p {
   font-size: 1.8rem;
 }
-
 #call-to-action img {
   max-width: 50rem;
   margin-left: 3rem;
 }
 
 #footer {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(400px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-gap: 30px 10px;
   margin: 4rem 3rem;
 }
-
 #footer .footer-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 #footer .logo {
   padding-right: 20rem;
 }
-
 #footer .col {
   margin: 0 3.5rem;
 }
-
 #footer .col p {
   font-weight: 900;
   margin-bottom: 10px;
 }
-
 #footer .col ul li {
   margin-bottom: 10px;
 }
@@ -554,34 +423,37 @@ nav.main-nav ul#menu .highlight {
   html {
     font-size: 50%;
   }
+
   p {
     font-size: 2rem !important;
   }
+
   h2 {
     margin: 0 1rem 0;
   }
 }
-
 @media (max-width: 540px) {
   #menu {
     display: none !important;
   }
+
   .one,
-  .two,
-  .three {
+.two,
+.three {
     background-color: #000;
     height: 5px;
     width: 100%;
     margin: 6px auto;
-    -webkit-transition-duration: 0.3s;
-            transition-duration: 0.3s;
+    transition-duration: 0.3s;
   }
+
   .menu-toggle {
     width: 40px;
     height: 30px;
     margin-right: 20px;
     margin-top: 8px;
   }
+
   /* fullscreen */
   .menu-section.on {
     position: absolute;
@@ -591,15 +463,9 @@ nav.main-nav ul#menu .highlight {
     height: 100vh;
     background-color: var(--color-blue);
     z-index: 10;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .menu-section.on nav {
     display: block;
@@ -610,8 +476,7 @@ nav.main-nav ul#menu .highlight {
     top: 15px;
   }
   .menu-section.on .menu-toggle .one {
-    -webkit-transform: rotate(45deg) translate(7px, 7px);
-            transform: rotate(45deg) translate(7px, 7px);
+    transform: rotate(45deg) translate(7px, 7px);
     background-color: white;
   }
   .menu-section.on .menu-toggle .two {
@@ -619,8 +484,7 @@ nav.main-nav ul#menu .highlight {
     background-color: white;
   }
   .menu-section.on .menu-toggle .three {
-    -webkit-transform: rotate(-45deg) translate(8px, -9px);
-            transform: rotate(-45deg) translate(8px, -9px);
+    transform: rotate(-45deg) translate(8px, -9px);
     background-color: white;
   }
   .menu-section.on #menu {
@@ -629,14 +493,14 @@ nav.main-nav ul#menu .highlight {
     margin-left: 0;
   }
   .menu-section.on #menu li a {
-    -webkit-transition-duration: 0.5s;
-            transition-duration: 0.5s;
+    transition-duration: 0.5s;
     font-size: 3rem;
     line-height: 1.8;
     display: block;
     color: white;
     margin-bottom: 2rem;
   }
+
   #banner img {
     max-width: 410px;
     margin: auto;
@@ -647,6 +511,7 @@ nav.main-nav ul#menu .highlight {
   #banner h1 {
     font-size: 3.5rem;
   }
+
   #call-to-action img {
     display: none;
   }
@@ -658,11 +523,9 @@ nav.main-nav ul#menu .highlight {
     margin-left: 0;
     margin-bottom: 5rem;
   }
+
   #banner,
-  .cta {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+.cta {
+    flex-direction: column-reverse;
   }
 }
