--- a/Public/CSS/sass/partials/_reset.scss
+++ b/Public/CSS/sass/partials/_reset.scss
@@ -16,7 +16,9 @@ body {
   color: var(--color-black);
   font-size: 1.6rem;
 }
-
+button{
+  font-family: "museo-sans", sans-serif;
+}
 ul {
   margin: 0;
   padding: 0;
