--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -6,4 +6,5 @@
 @import "partials/navbar";
 @import "partials/sectionsHome";
 @import "partials/footer";
+@import "partials/sidebarDashboard";
 @import "partials/mediasqueries";
