update no css da agenda

--- a/Public/CSS/sass/partials/_cores.scss
+++ b/Public/CSS/sass/partials/_cores.scss
@@ -1,4 +1,4 @@
-$azul: #1632e8;
-$amarelo: #ffff24;
-$rosa: #ff5f7d;
-$roxo: #02011d;
+$azul: #3B1AE3;
+$amarelo: #FFEE56;
+$rosa: #F25270;
+$roxo: #02011D;
