--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -7,4 +7,5 @@
 @import "partials/sectionsHome";
 @import "partials/footer";
 @import "partials/sidebarDashboard";
+@import "partials/calendar";
 @import "partials/mediasqueries";
