--- a/Public/CSS/theme.css
+++ b/Public/CSS/theme.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://use.typekit.net/fck0yop.css");
+@import url("https://use.typekit.net/fck0yop.css");
 * {
   margin: 0;
   padding: 0;
@@ -68,7 +69,7 @@ h2 {
   text-align: center;
   font-size: 3.2rem;
   margin-bottom: 1rem;
-  color: #02011d;
+  color: #02011D;
 }
 #loginSection main form div {
   display: flex;
@@ -77,7 +78,7 @@ h2 {
   margin-bottom: 3.2rem;
 }
 #loginSection main form div label {
-  color: #1632e8;
+  color: #3B1AE3;
   margin-bottom: 1rem;
   font-size: 1.8rem;
 }
@@ -86,7 +87,7 @@ h2 {
 #loginSection main form div input[type=text] {
   width: 100%;
   font-size: 1.6rem;
-  border: 1px solid #1632e8;
+  border: 1px solid #3B1AE3;
   border-radius: 6px;
   padding: 1rem 1.6rem;
 }
@@ -99,7 +100,7 @@ h2 {
   height: 5rem;
   font-size: 2rem;
   color: white;
-  background-color: #1632e8;
+  background-color: #3B1AE3;
   font-weight: 700;
   border-radius: 5.1rem;
   border: 0px;
@@ -114,7 +115,7 @@ h2 {
 #loginSection main div.ou::after {
   content: "";
   width: 40%;
-  border-bottom: solid 1px #1632e8;
+  border-bottom: solid 1px #3B1AE3;
   position: absolute;
   left: 5%;
   top: 50%;
@@ -123,7 +124,7 @@ h2 {
 #loginSection main div.ou::before {
   content: "";
   width: 40%;
-  border-bottom: solid 1px #1632e8;
+  border-bottom: solid 1px #3B1AE3;
   position: absolute;
   left: 55%;
   top: 50%;
@@ -143,7 +144,7 @@ h2 {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  color: #02011d;
+  color: #02011D;
   text-decoration: none;
 }
 #loginSection main .google-btn .google-icon-wrapper {
@@ -172,7 +173,7 @@ h2 {
   font-size: 1.8rem;
 }
 #loginSection main div.npossui a {
-  color: #1632e8;
+  color: #3B1AE3;
 }
 
 :root {
@@ -470,7 +471,7 @@ aside.side-menu nav.navAside ul li {
 aside.side-menu nav.navAside ul li a {
   font-size: 1.6rem;
   font-weight: 700;
-  color: #02011d;
+  color: #02011D;
   width: 100%;
   display: grid;
   justify-content: center;
@@ -496,9 +497,76 @@ aside.side-menu nav.navAside form button {
   height: 3.5rem;
   border-radius: 51px;
   color: #fff;
-  background-color: #1632e8;
+  background-color: #3B1AE3;
   border: 0px;
   box-shadow: none;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html {
+  /* a cada 1rem será considera 10px */
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "museo-sans", sans-serif;
+  color: var(--color-black);
+  font-size: 1.6rem;
+}
+
+button {
+  font-family: "museo-sans", sans-serif;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+h2 {
+  margin: 0 30rem 3rem;
+  font-size: 3.2rem;
+  text-align: center;
+}
+
+div.contentDashboard div.grid {
+  display: flex;
+  height: 80%;
+  width: 65%;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 3rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+div.contentDashboard div.grid h1 {
+  margin-bottom: 5rem;
+  display: inline-block;
+}
+div.contentDashboard div.grid div#calendar {
+  font-family: "museo-sans", sans-serif !important;
+  width: 100%;
+  height: 35rem;
+}
+div.contentDashboard div.grid div#calendar button {
+  background-color: #3B1AE3 !important;
+  border: 0.2px #7780ff solid !important;
+  font-family: "museo-sans", sans-serif !important;
 }
 
 @media (max-width: 768px) {
