--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -8,4 +8,5 @@
 @import "partials/footer";
 @import "partials/sidebarDashboard";
 @import "partials/calendar";
+@import "partials/addTeste";
 @import "partials/mediasqueries";
