css da pagina convidar testers adicionado

--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -9,4 +9,5 @@
 @import "partials/sidebarDashboard";
 @import "partials/calendar";
 @import "partials/addTeste";
+@import "partials/convidarTesters";
 @import "partials/mediasqueries";
