--- a/Views/Testes/convidarTesters.hbs
+++ b/Views/Testes/convidarTesters.hbs
@@ -1,33 +1,37 @@
 <div class="cotainerDashboard">
     {{> _sidebar}}
     <div class="contentDashboard">
-        <h3>Convidar Testers</h3>
-        {{teste.nome}}
-        {{userCriador.nome}}
-        {{#if users}}
-        <div id="testersTable">
-            <div id='testersTableHeader'>
-
-                <span>Nome</span>
-                <span>Convidar</span>
+        <div class="convidarTestersContainer">
+            <h1>Convidar Testers</h1>
+            {{#if users}}
+            <div id="testersTable">
+                <div id='testersTableHeader'>
+                    <div class="testersTableTile">Nome</div>
+                    <div class="testersTableTile">Idade</div>
+                    <div class="testersTableTile">Profissão</div>
+                    <div class="testersTableTile">Tipo de Defiência</div>
+                    <div class="testersTableTile">Convidar</div>
+                </div>
+                <ul>
+                    {{#each users as |user|}}
+                    <li id="tr">
+                        <div>{{user.nome}}</div>
+                        <div>
+                            <input type="hidden" name="_method" value="POST">
+                            <button id='convidar' onclick="mandarConvite('{{user.nome}}')" class="btn blue">
+                                <span>Convidar</span>
+                            </button>
+                        </div>
+                    </li>
+                    {{/each}}
+                </ul>
+                <div role="button"><a href="finalizado">Próximo</a></div>
             </div>
-            <ul>
-                {{#each users as |user|}}
-                <li id="tr">
-                    <div>{{user.nome}}</div>
-                    <div>
-                        <input type="hidden" name="_method" value="POST">
-                        <button id='convidar' onclick="mandarConvite('{{user.nome}}')" class="btn blue">
-                            <span>Convidar</span>
-                        </button>
-                    </div>
-                </li>
-                {{/each}}
-            </ul>
+            {{else}}
+            <p>Não tem testers disponiveis</p>
+            {{/if}}
+
         </div>
-        {{else}}
-        <p>Vcoê não tem testes ainda</p>
-        {{/if}}
     </div>
 </div>
 <script src="/Javascript/convite.js"></script>
