Adicionado pagina final de adicionar teste

--- a/Views/Testes/convidarTesters.hbs
+++ b/Views/Testes/convidarTesters.hbs
@@ -25,7 +25,7 @@
                     </li>
                     {{/each}}
                 </ul>
-                <div role="button"><a href="finalizado">Próximo</a></div>
+                <div role="button"><a href="/testes/add/finalizado">Próximo</a></div>
             </div>
             {{else}}
             <p>Não tem testers disponiveis</p>
