--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -9,5 +9,6 @@
 @import "partials/sidebarDashboard";
 @import "partials/calendar";
 @import "partials/addTeste";
+@import "partials/addTesteFinalizado";
 @import "partials/convidarTesters";
 @import "partials/mediasqueries";
