--- a/Public/CSS/theme.css
+++ b/Public/CSS/theme.css
@@ -659,6 +659,59 @@ div.contentDashboard div.grid div#calendar button {
   height: 4rem;
 }
 
+div#addTesteFinalizadoContainer {
+  display: flex;
+  height: 80%;
+  width: 90%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+div#addTesteFinalizadoContainer div#addTesteFinalizado {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+div#addTesteFinalizadoContainer div#addTesteFinalizado h1 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 4.8rem;
+  line-height: 140.62%;
+  color: #02011D;
+  margin-bottom: 4rem;
+}
+div#addTesteFinalizadoContainer div#addTesteFinalizado p {
+  text-align: center;
+  font-size: 1.8rem;
+  margin-bottom: 4rem;
+  padding: 0 10%;
+}
+div#addTesteFinalizadoContainer div#addTesteFinalizado div[role=button] {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 19.2rem;
+  height: 5rem;
+  border: 4px solid #3B1AE3;
+  border-radius: 5.1rem;
+  margin-right: 2.5rem;
+}
+div#addTesteFinalizadoContainer div#addTesteFinalizado div[role=button] a {
+  font-weight: 700;
+  font-size: 1.8rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #02011D;
+}
+
 .convidarTestersContainer {
   display: flex;
   height: 80%;
